# ocart

./: Cargo.toml  README.md  build.sh  dfx.json  package-lock.json  package.json  pnpm-lock.yaml
src/backend/: Cargo.toml  backend.did
src/backend/declarations/: backend.did  backend.did.d.ts  backend.did.js
src/backend/src/: artist.rs  lib.rs  types.rs  utils.rs
src/frontend/: App.tsx
src/frontend/components/: Explore.tsx
src/ocart_backend/: Cargo.toml
src/ocart_frontend/: package.json
src/ocart_frontend/src/: App.jsx
