[package]
name = "backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
getrandom = { version = "0.2.15", features = ["js"] }
ic-cdk = "0.17"
rand = "0.8.5"
serde = "1.0.216"
