[package]
name = "backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
rand = { version = "0.8.5", default-features = false, features = ["alloc", "small_rng"] }
serde = "1.0.216"
sha2 = "0.10.8"
